tests/baselines/reference/parserShorthandPropertyAssignment2.errors.txt
tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment2.ts(1,11): error TS2304: Cannot find name 'class'.


==== tests/cases/conformance/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment2.ts (1 errors) ====
    var v = { class };
              ~~~~~
!!! error TS2304: Cannot find name 'class'.